<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostfixActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/postfix_activity_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:textSize="24sp"
        android:textStyle="normal"
        android:text="@string/calculator_activity_subscript" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:textSize="24sp"
        android:textStyle="normal"
        android:text="Provide expression with spaces\n(i.e. 5 6 + 15 -)"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:id="@+id/postfix_raw_expression"
        android:textSize="24sp"
        android:textStyle="normal"
        android:hint="@string/default_expression"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:id="@+id/postfix_submit_button"
        android:onClick="submit"
        android:textStyle="normal"
        android:text="@string/submit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:id="@+id/postfix_result_view"
        android:textSize="24sp"
        android:textStyle="normal"
        android:text="@string/default_result"/>
</GridLayout>