<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PrefixActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:textSize="32sp"
        android:text="Prefix Calculator"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:textSize="24sp"
        android:text="@string/calculator_activity_subscript"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:textSize="24sp"
        android:text="Provide expression with spaces\n(i.e. - + 5 6 15)"
        android:textStyle="normal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:id="@+id/prefix_raw_expression"
        android:textSize="24sp"
        android:textAppearance="@string/default_expression"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/submit"
        android:id="@+id/prefix_submit_button"
        android:onClick="submit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:id="@+id/prefix_result_view"
        android:textSize="24sp"
        android:textStyle="normal"
        android:text="@string/default_result"/>
</GridLayout>